# IC-Pedro

./: Manifest.toml  Project.toml  README.md  packages.txt  start.jl
antigo/C++/: House.c++  HouseLog.c++  Resident.c++  SanitaryDevice  SanitaryLog.c++  Time.c++  TimePersonProfile.c++  TimeProfile.c++  version.c++
antigo/Julia/: Time.jl  TimeProfile.jl
antigo/Migração python/Agora/: incrementa.m
antigo/Migração python/FUNCOES/: Geracao_de_dados.m  uso_chuveiro.m  uso_lavatorio.m  uso_pia.m  uso_tanque.m
antigo/Migração python/Fazendo/: chuveiro_function.m  horario_function.m  lavatorio_function.m  pia_cozinha_function.m
antigo/Migração python/Ja_lidas/: analisar.m  simul.m  sorteio_hor_lavatorio.m  sorteio_hor_maquina.m  sorteio_hor_pia.m  sorteio_hor_tanque.m  totaliza.m  totaliza2.m
antigo/RoutineLib/: Manifest.toml  Project.toml
antigo/backend_julia/: Manifest.toml  Project.toml  compile.jl
antigo/simulacao_gui/: 1.5.0  main.py
src/Julia/: DistributionParams.jl  Profiles.jl  Routine.jl  RoutineProfile.jl  Test_Routine.jl
src/Python/: DistributionsParams.py  Routine.py  RoutineProfile.py  TestRoutine.py
src/backend-go/: go.mod
src/backend-go/src/: go.mod  (+1 more)
src/backend-rust/: Cargo.toml
src/backend-rust/src/: main.rs
src/backend-rust/src/backend/: Cargo.toml
src/backend-rust/src/backend/src/: main.rs
src/backend-rust/src/dists/: dists.rs  normaldist.rs  poissondist.rs
src/backend-rust/src/stat_dists/: Cargo.toml
src/backend-rust/src/stat_dists/src/: lib.rs  normaldist.rs  poissondist.rs  uniformdist.rs
test/Julia/: Test_Routine.jl
(+12 files in other folders)
