[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "dists"  # Nome da biblioteca (usado como "dists" externamente)
path = "src/dists/dists.rs"  # Ponto de entrada da biblioteca

[[bin]]
name = "backend-rust"  # Nome do executável
path = "src/main.rs"  # Ponto de entrada do executável

[dependencies]

rand = "0.8.5"
#rand_mt = "4.2.2"  # Para MersenneTwister
rand_distr = "0.4.3"  # Para distribuições estatísticas
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"